# mufan_website

./: README.md
backend/: .env_sample  123.py  JWTtoken.py  crud.py  database.py  db.sqlite3  hash.py  main.py  models.py  oauth.py  pyproject.toml  requirement.txt  requirements.txt  schemas.py  test.py
backend/routers/: post.py  tickets.py  user.py
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: ProductCard.tsx
frontend/pages/product/: [id].tsx
frontend/pages/products/: index.tsx
frontend/src/: App.js  index.js
frontend/src/api/: axios.js
frontend/src/components/: Admin.js  Home.js  LinkPage.js  Login.js  PersistantLogin.js  Register.js  RequireAuth.js  RequiredAuth.js  Users.js
frontend/src/context/: AuthContext.js  AuthProvider.js
frontend/src/hooks/: useAxiosPrivate.js  useInput.js  useLocalStorage.js  useLogout.js  useToggle.js
frontend_/: package-lock.json  package.json
frontend_/src/: App.js  index.js
frontend_/src/api/: axios.js
frontend_/src/components/: Layout.js  Login.js  Profile.js  RequireAuth.js  Test.js  Unauthorized.js
frontend_/src/context/: AuthProvider.js
frontend_/src/hook/: useAxiosPrivate.js  useRefreshToken.js
