[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["alex1151212 <alex1151212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.78.0"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.36"
Pillow = "^9.1.1"
aiofiles = "^0.8.0"
bcrypt = "^3.2.2"
aioredis = "^2.0.1"
redis = "^4.3.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
